Project 1/force-app/main/default/objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <label>Mail</label>
    <nameField>
        <label>Mail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>