Project 1/force-app/main/default/objects/Mail__c/fields/Delivered_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Time__c</fullName>
    <label>Delivered Time</label>
    <type>DateTime</type>
</CustomField>