Project 1/force-app/main/default/objects/Mail__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>