Project 1/force-app/main/default/objects/Mail__c/fields/On_Route__c.field-meta.xml
<CustomField>
    <fullName>On_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <type>Lookup</type>
</CustomField>