Project 1/force-app/main/default/objects/Mail__c/fields/Shipping_To__c.field-meta.xml
<CustomField>
    <fullName>Shipping_To__c</fullName>
    <label>Shipping To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>