Project 1/force-app/main/default/objects/Mail__c/fields/Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Code__c</fullName>
    <label>Tracking Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>