Project 1/force-app/main/default/objects/Mail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the package</description>
    <inlineHelpText>The value of a package can be 100 dollars.</inlineHelpText>
    <label>Value</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>