Project 1/force-app/main/default/objects/Mail__c/recordTypes/Mail_RT.recordType-meta.xml
<RecordType>
    <fullName>Mail_RT</fullName>
    <active>true</active>
    <label>Mail RT</label>
</RecordType>