Project 1/force-app/main/default/objects/Mail__c/validationRules/Delivery_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Status__c) == &apos;Delivered&apos; &amp;&amp; ISBLANK( Delivered_Time__c)</errorConditionFormula>
    <errorMessage>Please make sure the delivery date and time is filled out if the package has been delivered</errorMessage>
</ValidationRule>