Project 1/force-app/main/default/objects/Mail__c/validationRules/Out_For_Delivery_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_For_Delivery_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) == &apos;Out for Delivery&apos; &amp;&amp; ISBLANK(On_Route__c)</errorConditionFormula>
    <errorMessage>Please make sure the route it&apos;s being delivered on is filled out</errorMessage>
</ValidationRule>