Project 1/force-app/main/default/objects/Mail__c/validationRules/Shipping_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) == &apos;Shipping&apos; &amp;&amp; ISBLANK(Shipping_To__c)</errorConditionFormula>
    <errorMessage>Please make sure you put where it&apos;s shipping to if it&apos;s status is shipping</errorMessage>
</ValidationRule>